--- a/src/scss/mensbiz/_slider.scss
+++ b/src/scss/mensbiz/_slider.scss
@@ -57,12 +57,7 @@
 }
 
 
-
-
 .cms-home-page-v1 {
-	.owl-carousel .banner-item .content_slider .buttons a.action.primary {
-
-	}
 	.content_slider .custom_content {
 		width: 34%;
 		.slider_top {
